Added product layout features.

--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
           alt="dogfood"
         />
       </section>
-      <section class="category-container food" id="food">
-        <ul></ul>
-      </section>
-      <section class="category-container toys" id="toys">
-        <ul></ul>
-      </section>
-      <section class="category-container clothes" id="clothes">
-        <ul></ul>
+      <section class="products-container">
+        <section class="category-container food" id="food">
+          <ul></ul>
+        </section>
+        <section class="category-container toys" id="toys">
+          <ul></ul>
+        </section>
+        <section class="category-container clothes" id="clothes">
+          <ul></ul>
+        </section>
       </section>
     </main>
     <!-- link to the icon -->
