added shopping cart features

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <!-- code for cart pop out -->
+    <div class="shopping-cart hidden">
+      <button class="close">X</button>
+      <h3>Your cart:</h3>
+      <!-- will populate later with js -->
+      <ul id="cart-items"></ul>
+    </div>
     <!-- end of code for cart pop out -->
     <header>
       <h1>Dog World</h1>
