Populating array of shopping items

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       <h3>Your cart:</h3>
       <!-- will populate later with js -->
       <ul id="cart-items"></ul>
+      <div>
+        <p class="subtotal">
+          Subtotal: $<span class="subtotal-price">0.00</span>
+        </p>
+        <p class="tax">Tax: $<span class="tax-price">0.00</span></p>
+        <p class="total">Total: $<span class="total-price">0.00</span></p>
+      </div>
     </div>
     <!-- end of code for cart pop out -->
     <header>
