added functionality for price calculation

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p class="subtotal">
           Subtotal: $<span class="subtotal-price">0.00</span>
         </p>
-        <p class="tax">Tax: $<span class="tax-price">0.00</span></p>
+        <p class="tax">Tax: $<span class="tax-rate">0.00</span></p>
         <p class="total">Total: $<span class="total-price">0.00</span></p>
       </div>
     </div>
