--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dog World</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- code for cart pop out -->
@@ -51,12 +58,15 @@
       </section>
       <section class="products-container">
         <section class="category-container food" id="food">
+          <h2>Food & Treats</h2>
           <ul></ul>
         </section>
         <section class="category-container toys" id="toys">
+          <h2>Toys</h2>
           <ul></ul>
         </section>
         <section class="category-container clothes" id="clothes">
+          <h2>Clothes & Costumes</h2>
           <ul></ul>
         </section>
       </section>
