--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     </div>
     <!-- end of code for cart pop out -->
     <header>
+      <img src="assets/logo.png" alt="paw=logo" id="logo" />
       <h1>Dog World</h1>
       <i class="fa-solid fa-cart-shopping">
         <p id="num-of-items"></p>
