fixed cart icon styles

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
     <header>
       <img src="assets/logo.png" alt="paw=logo" id="logo" />
       <h1>Dog World</h1>
-      <i class="fa-solid fa-cart-shopping">
-        <p id="num-of-items"></p>
-      </i>
+      <div id="cart-div">
+        <i class="fa-solid fa-cart-shopping">
+          <p id="num-of-items"></p>
+        </i>
+      </div>
     </header>
     <main>
       <section class="home-section">
